# Freecss

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
scripts/: smoke_alerts.py
scripts/launchd/: OPS_LAPTOP.md  com.user.deleveraging-caffeinate.plist  com.user.deleveraging-watch.plist
server/: __init__.py  __main__.py  app.py  config.py  feed.py  scheduler.py  state.py
server/adapters/: __init__.py  base.py  finnhub.py  massive.py  massive_daily.py  massive_news.py  stub.py  x_api.py
server/alerts/: __init__.py  bucket_rules.py  engine.py  news_rules.py  quiet_hours.py  rules.py
server/analytics/: __init__.py  bars.py  (+7 more)
tests/: conftest.py  test_adapters_daily.py  test_adapters_news.py  test_adapters_stub.py  test_api_alerts.py  test_api_buckets.py  test_api_earnings_usage.py  test_api_exposures.py  test_api_health.py  test_api_liquidity.py  test_api_news.py  test_api_notes.py  test_api_notes_phase4.py  test_api_settings.py  test_api_social.py  test_api_watchlist.py  test_api_watchlist_phase2.py  test_bucket_pca.py  test_bucket_rules.py  test_bucket_zscore.py  test_config.py  test_db.py  test_engine.py  test_engine_factor_kind.py  test_finbert.py  test_jobs_archive_ticks.py  test_jobs_bucket_alerts.py  test_jobs_factor.py  test_jobs_liquidity.py  test_jobs_news.py  test_liquidity.py  test_multitest.py  test_news_rules.py  test_profile_setup.py  test_pushover.py  test_quiet_hours.py  test_regression.py  test_relevance.py  test_residual.py  test_rules.py  (+2 more)
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+59 files in other folders)
