[project]
name = "deleveraging-watch"
version = "0.1.0"
description = "Single-user market-awareness dashboard: real-time deleveraging-signal alerts for a personal watchlist."
requires-python = ">=3.11"
# Phase 0 (skeleton) runtime deps. Heavier phases pull from the optional extras below.
dependencies = [
    "Flask>=3.0",
    "Flask-SocketIO>=5.3",
    "Flask-Cors>=4.0",
    "APScheduler>=3.10",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
# Phase 1: live Massive WS feed.
feed = [
    "websocket-client>=1.7",
]
# Phase 2: FinBERT sentiment/embeddings + Haiku profile text.
nlp = [
    "transformers>=4.40",
    "torch>=2.2",
    "anthropic>=0.25",
]
# Phase 3: factor regression + PCA.
analytics = [
    "numpy>=1.26",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "pandas>=2.2",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning:apscheduler.*",
]
